<resources>
    <string name="app_name">Ceramic Pro MX</string>
    <string name="title_home">Inicio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_appointment">Cita</string>
    <string name="title_membership">Membresía</string>
    <string name="title_subscriptions">Paquetes</string>
    <string name="title_account">Cuenta</string>
    <string name="title_qr">QR</string>
    <string name="title_AppointmentHistoryFragment">AppointmentHistory</string>
    <string name="str_app_version">©Ceramic Pro Esmeralda v1.06</string>
    <string name="themeAppStrDark">Dark</string>
    <string name="themeAppStrWhite">White</string>


    <string name="ButtonRegister">Regístrate</string>
    <string name="ButtonLogin">Iniciar Sesión</string>
    <string name="Invited">Continuar como invitado</string>
    <string name="Iniciar_sesion">Iniciar Sesión</string>
    <string name="Email_Text">Correo electrónico</string>
    <string name="Password_Text">Contraseña</string>
    <string name="ButtonIngresar">Ingresar</string>
    <string name="title_QR">Código QR</string>
    <string name="QR_Text_Description">Tu código QR es privado. Si lo compartes con la agencia CeramicPro Esmeralda, ellos podrán identificarte como un cliente.</string>
    <string name="Servicio_agendado">Servicio agendado</string>
    <string name="Marca_Vehiculo">Marca del vehículo</string>
    <string name="Modelo_Vehiculo">Modelo del vehículo</string>
    <string name="Color_Vehiculo">Color del vehículo</string>
    <string name="Status">Validación de agencia</string>
    <string name="CancelButton">Cancelar</string>
    <string name="Mayor">¿Eres mayor de edad?</string>
    <string name="Mayor_Desc">Para poder utilizar esta aplicación debes verificar que cumples con la mayoría de edad.</string>
    <string name="ButtonYesMayor">Soy mayor de edad</string>
    <string name="ButtonNotMayor">No soy mayor de edad</string>
    <string name="dieciocho_o_mas">Al usar Ceramic Pro estás confirmando que tienes 18 años o más.</string>
    <string name="Loading">Cargando...</string>
    <string name="lista_de_citas">Lista de citas</string>
    <string name="lista_de_paquetes">Paquetes</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="Crea_cuenta">Por favor crea una cuenta o inicia sesión, para utilizar este apartado.</string>
    <string name="agendar_cita">Agendar Cita</string>
    <string name="tipo_de_vehiculo">Tipo de vehículo</string>
    <string name="servicio">Servicio</string>
    <string name="marca_del_vehiculo">Marca del vehículo</string>
    <string name="modelo_del_vehiculo">Modelo del vehículo</string>
    <string name="color_del_vehiculo">Color del vehículo</string>
    <string name="fecha_de_la_cita">Fecha de la cita</string>
    <string name="hora_de_la_cita">Hora de la cita</string>
    <string name="Forma_Parte">Forma parte de nuestro equipo</string>
    <string name="LiderMundial">Somos el líder mundial en revestimientos y películas nano cerámicas en todo el mundo</string>
    <string name="menos_mantenimiento">Menos Mantenimiento</string>
    <string name="siempre_nuevo">Siempre Nuevo</string>
    <string name="buena_inversion">Buena Inversión</string>
    <string name="Porque_ceramic_pro">¿Por qué ceramic pro esmeralda en tu vehículo?</string>
    <string name="info_valid">Utilizaremos esta información para validar tu registro</string>
    <string name="nombres">Nombre(s)</string>
    <string name="apellidos">Apellido(s)</string>
    <string name="codigo_postal">Código postal</string>
    <string name="celular">Número teléfonico</string>
    <string name="Confirm_Password">Confirma tu contraseña</string>
    <string name="ButtonRegister_two">Registrar</string>
    <string name="paquete_oro">PAQUETE ORO</string>
    <string name="garantia_por_vida">Garantía de por vida</string>
    <string name="pack_oro_desc">El paquete oro consta de 4 capas de Ceramic Pro 9H aplicadas a la pintura del vehículo, brindando protección permanente con garantía de por vida. Se agrega una capa adicional de protección a las áreas expuestas, incluidos el parabrisas y las ruedas.</string>
    <string name="incluye">INCLUYE</string>
    <string name="cuatro_capas_de_9h">4 capas de 9H</string>
    <string name="una_capa_de_capa_superior">1 capa de capa superior</string>
    <string name="una_capa_de_9h_sobre_pl_sticos">1 Capa de 9H sobre plásticos</string>
    <string name="una_capa_de_rueda_y_calibre_en_las_caras_de_las_ruedas">1 capa de rueda y calibre en las caras de las ruedas</string>
    <string name="una_capa_de_vidrio_en_el_parabrisas">1 capa de vidrio en el parabrisas</string>
    <string name="_1_capa_de_capa_superior">1 capa de capa superior</string>
    <string name="_1_capa_de_top_coat">1 Capa de Top Coat sobre plásticos y llantas</string>
    <string name="_1_capa_de_top_coat_sobre_plasticos">1 Capa de Top Coat sobre plásticos</string>
    <string name="PackBronce_Desc">El Paquete Bronce consta de 1 capa de Ceramic Pro Top Coat aplicada sobre la pintura del vehículo. Este recubrimiento protege contra rayones leves y proporciona un hermoso acabado brillante con una garantía de 2 años. Se agrega una capa protectora adicional a otras áreas, incluidos el parabrisas y las ruedas.</string>
    <string name="garantia_2_años">Garantía de 2 años</string>
    <string name="paquete_bronce">PAQUETE BRONCE</string>
    <string name="_1_capa_de_9h">1 capa de 9H</string>
    <string name="PackPlata_Desc">El Paquete Plata incluye 1 capa de Ceramic Pro 9H aplicada sobre la pintura del vehículo, brindando protección contra los elementos y una garantía de 5 años. Se agrega una capa protectora adicional a otras áreas, incluidos el parabrisas y las ruedas.</string>
    <string name="garant_de_5_años">Garantía de 5 años</string>
    <string name="paquete_plata">PAQUETE PLATA</string>
    <string name="Formar_Parte_De_Equipo">¿Quieres formar parte de nuestro equipo?</string>
    <string name="Send_Information">Ingresa tu información y te estaremos contactando.</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="ButtonSend">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="send_desc">Al enviar tu información estás de acuerdo en que te contactaremos de Ceramic Pro Esmeralda.</string>


</resources>