<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.esmeralda.ceramicpro.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_appointment"
        android:name="com.esmeralda.ceramicpro.ui.appointment.AppointmentFragment"
        android:label="@string/title_appointment"
        tools:layout="@layout/fragment_appointment" />
    <fragment
        android:id="@+id/navigation_membership"
        android:name="com.esmeralda.ceramicpro.ui.membership.MembershipFragment"
        android:label="@string/title_membership"
        tools:layout="@layout/fragment_membership" />
    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.esmeralda.ceramicpro.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.esmeralda.ceramicpro.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>