<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove_24"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Formar_Parte_De_Equipo"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        style="@style/TextAlternative"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Send_Information"
        android:gravity="center"
        android:textSize="20sp"
        style="@style/TextDescription"
        android:fontFamily="@font/montserrat"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/nombre_completo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:fontFamily="@font/montserrat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_NameFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Email_Text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:fontFamily="@font/montserrat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/celular"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:fontFamily="@font/montserrat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:fontFamily="@font/montserrat"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/Btn_Send"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:text="@string/ButtonSend"
        android:backgroundTint="@color/appColor"
        android:layout_gravity="bottom"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:fontFamily="@font/montserrat"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/Btn_No"
        android:textAllCaps="false"
        android:text="@string/cancelar"
        style="@style/ButtomAlternative"
        android:layout_gravity="bottom"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_desc"
        android:gravity="center"
        android:textSize="15sp"
        style="@style/TextDescription"
        android:fontFamily="@font/montserrat"/>

</LinearLayout>