<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove_24"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mayor"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        style="@style/TextAlternative"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Mayor_Desc"
        android:gravity="center"
        android:textSize="20sp"
        style="@style/TextDescription"
        android:fontFamily="@font/montserrat"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/Btn_Si"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"
        android:text="@string/ButtonYesMayor"
        android:backgroundTint="@color/appColor"
        android:layout_gravity="bottom"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:fontFamily="@font/montserrat"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/Btn_No"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"
        android:text="@string/ButtonNotMayor"
        style="@style/ButtomAlternative"
        android:layout_gravity="bottom"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dieciocho_o_mas"
        android:gravity="center"
        android:textSize="15sp"
        style="@style/TextDescription"
        android:fontFamily="@font/montserrat"/>

</LinearLayout>