<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register_account_one.RegisterAccountOneFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingBottom="300dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/Btn_Back_F"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BgStyle"
                    android:paddingTop="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ButtonRegister"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    style="@style/TextBold"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/info_valid"
                android:textAlignment="center"
                android:textColor="@color/simple_text"
                android:fontFamily="@font/montserrat"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nombres"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/montserrat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:fontFamily="@font/montserrat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/apellidos"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/montserrat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:fontFamily="@font/montserrat"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/codigo_postal"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/montserrat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_CodigoPostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:fontFamily="@font/montserrat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/celular"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/montserrat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:fontFamily="@font/montserrat"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/Email_Text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/montserrat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/montserrat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/Password_Text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/montserrat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/montserrat"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Confirm_Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/montserrat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Confirm_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/montserrat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/Btn_Continuar"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/ButtonRegister_two"
                style="@style/ButtomAlternative"
                android:textSize="20sp"
                app:cornerRadius="12dp"
                android:fontFamily="@font/montserrat"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>